// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Freshly Created Course prompt preview renders and matches snapshot 1`] = `
<C>
  <FreshlyCreatedCourse
    ux={
      PreviewOnboarding {
        "course": Object {},
        "dismissNag": [MockFunction],
        "isDismissed": false,
        "priority": 3,
        "tourContext": Object {},
      }
    }
  />
</C>
`;

exports[`Freshly Created Course prompt student renders and matches snapshot 1`] = `
<C>
  <FreshlyCreatedCourse
    ux={
      StudentCourseOnboarding {
        "course": Object {},
        "dismissNag": [MockFunction],
        "displayPayment": false,
        "displayTrialActive": false,
        "isDismissed": false,
        "priority": 3,
        "tourContext": Object {},
      }
    }
  />
</C>
`;
